--- a/test/haml/results/filters.xhtml
+++ b/test/haml/results/filters.xhtml
@@ -60,3 +60,4 @@ How are you doing today?
 &lt;div class=&quot;foo&quot;&gt;
   &lt;p&gt;I think &amp;mdash; or do I?&lt;/p&gt;
 &lt;/div&gt;
+&lt;foo&gt;&#x000A;  &lt;bar /&gt;&#x000A;&lt;/foo&gt;
